{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 52,
  "lineage": "7821254f-fedf-0c90-5e1e-2a33a9caf25e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-0e417a18a53f092fb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e417a18a53f092fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07818afde38a329ab"
              }
            ],
            "primary_network_interface_id": "eni-07818afde38a329ab",
            "private_dns": "ip-10-0-10-75.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.75",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09788d45f4523bfd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c5121792e4cc935",
            "tags": {
              "Name": "private-subnet-1-ec2-1",
              "Subnet": "private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-1-ec2-1",
              "Subnet": "private-subnet-1",
              "Tier": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a31519f451faa51"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-0e417a18a53f092fb",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.private_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-02fdf790aa2bcf43e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fdf790aa2bcf43e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07ad6b42a280fc0b2"
              }
            ],
            "primary_network_interface_id": "eni-07ad6b42a280fc0b2",
            "private_dns": "ip-10-0-10-51.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.51",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b8876f7015d11b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c5121792e4cc935",
            "tags": {
              "Name": "private-subnet-1-ec2-2",
              "Subnet": "private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-1-ec2-2",
              "Subnet": "private-subnet-1",
              "Tier": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a31519f451faa51"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-02fdf790aa2bcf43e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.private_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-0c71d555e515e801b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c71d555e515e801b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b1c226370fb7703"
              }
            ],
            "primary_network_interface_id": "eni-02b1c226370fb7703",
            "private_dns": "ip-10-0-20-84.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.84",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ace8c873f9201bc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071f273865ae823e2",
            "tags": {
              "Name": "private-subnet-2-ec2-1",
              "Subnet": "private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-2-ec2-1",
              "Subnet": "private-subnet-2",
              "Tier": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a31519f451faa51"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-0c71d555e515e801b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.private_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-0a4a7cc7cd8e1ceb5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4a7cc7cd8e1ceb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ba3b7227accd9471"
              }
            ],
            "primary_network_interface_id": "eni-0ba3b7227accd9471",
            "private_dns": "ip-10-0-20-91.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.91",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a04ee6e40e627923",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071f273865ae823e2",
            "tags": {
              "Name": "private-subnet-2-ec2-2",
              "Subnet": "private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-2-ec2-2",
              "Subnet": "private-subnet-2",
              "Tier": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a31519f451faa51"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-0a4a7cc7cd8e1ceb5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.private_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-0a677ce31d181e028",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a677ce31d181e028",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-070a27ca3755ba9a9"
              }
            ],
            "primary_network_interface_id": "eni-070a27ca3755ba9a9",
            "private_dns": "ip-10-0-1-176.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-54-93-188-35.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.188.35",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d82166d326eb2e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfae1a5be7d10ff2",
            "tags": {
              "Name": "public-subnet-1-ec2-1",
              "Subnet": "public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-1-ec2-1",
              "Subnet": "public-subnet-1",
              "Tier": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b41ea57f9162e8a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-0a677ce31d181e028",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-01ffa2d24c9da774f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ffa2d24c9da774f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09d7f7137fd31a720"
              }
            ],
            "primary_network_interface_id": "eni-09d7f7137fd31a720",
            "private_dns": "ip-10-0-1-124.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-18-194-28-125.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.28.125",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088586d4ca903abbf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfae1a5be7d10ff2",
            "tags": {
              "Name": "public-subnet-1-ec2-2",
              "Subnet": "public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-1-ec2-2",
              "Subnet": "public-subnet-1",
              "Tier": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b41ea57f9162e8a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-01ffa2d24c9da774f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-0c50249b5b47b772b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c50249b5b47b772b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00034c8efc2807f66"
              }
            ],
            "primary_network_interface_id": "eni-00034c8efc2807f66",
            "private_dns": "ip-10-0-2-187.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-35-157-113-229.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.113.229",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5682f104731982f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d1c901c34f351d",
            "tags": {
              "Name": "public-subnet-2-ec2-1",
              "Subnet": "public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-2-ec2-1",
              "Subnet": "public-subnet-2",
              "Tier": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b41ea57f9162e8a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-0c50249b5b47b772b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c905937c14bd22b0",
            "arn": "arn:aws:ec2:eu-central-1:041626773691:instance/i-08c8e506d690ea823",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c8e506d690ea823",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e54d5c870da497e5"
              }
            ],
            "primary_network_interface_id": "eni-0e54d5c870da497e5",
            "private_dns": "ip-10-0-2-174.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.174",
            "public_dns": "ec2-63-176-174-137.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.176.174.137",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d82a9ebaa145a7f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d1c901c34f351d",
            "tags": {
              "Name": "public-subnet-2-ec2-2",
              "Subnet": "public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-2-ec2-2",
              "Subnet": "public-subnet-2",
              "Tier": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b41ea57f9162e8a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "i-08c8e506d690ea823",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_jammy",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:internet-gateway/igw-0f6b9c6a2a7b8f9f9",
            "id": "igw-0f6b9c6a2a7b8f9f9",
            "owner_id": "041626773691",
            "region": "eu-central-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "igw-0f6b9c6a2a7b8f9f9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:route-table/rtb-0cade4b1a060e0395",
            "id": "rtb-0cade4b1a060e0395",
            "owner_id": "041626773691",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtb-0cade4b1a060e0395",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:route-table/rtb-0bda11145612ff73d",
            "id": "rtb-0bda11145612ff73d",
            "owner_id": "041626773691",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6b9c6a2a7b8f9f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtb-0bda11145612ff73d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014ebea29adcc5ea2",
            "region": "eu-central-1",
            "route_table_id": "rtb-0cade4b1a060e0395",
            "subnet_id": "subnet-03c5121792e4cc935"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtbassoc-014ebea29adcc5ea2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb80ba191406b3c1",
            "region": "eu-central-1",
            "route_table_id": "rtb-0cade4b1a060e0395",
            "subnet_id": "subnet-071f273865ae823e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtbassoc-0bb80ba191406b3c1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b0e8da961da6233",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bda11145612ff73d",
            "subnet_id": "subnet-0cfae1a5be7d10ff2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtbassoc-03b0e8da961da6233",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074f3da9833155255",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bda11145612ff73d",
            "subnet_id": "subnet-0a5d1c901c34f351d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "rtbassoc-074f3da9833155255",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:security-group/sg-02a31519f451faa51",
            "description": "Allow VPC-internal access to private demo EC2 instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a31519f451faa51",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-ec2-sg",
            "name_prefix": "",
            "owner_id": "041626773691",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-ec2-sg"
            },
            "tags_all": {
              "Name": "private-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "sg-02a31519f451faa51",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:security-group/sg-0b41ea57f9162e8a9",
            "description": "Allow SSH and HTTP access to public demo EC2 instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b41ea57f9162e8a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-ec2-sg",
            "name_prefix": "",
            "owner_id": "041626773691",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-ec2-sg"
            },
            "tags_all": {
              "Name": "public-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "sg-0b41ea57f9162e8a9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:subnet/subnet-03c5121792e4cc935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c5121792e4cc935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041626773691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "subnet-03c5121792e4cc935",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:subnet/subnet-071f273865ae823e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071f273865ae823e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041626773691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "subnet-071f273865ae823e2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:subnet/subnet-0cfae1a5be7d10ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfae1a5be7d10ff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041626773691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "subnet-0cfae1a5be7d10ff2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:subnet/subnet-0a5d1c901c34f351d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5d1c901c34f351d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041626773691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0be7bfefe153d511c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "subnet-0a5d1c901c34f351d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:041626773691:vpc/vpc-0be7bfefe153d511c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053f9d7c8195f1988",
            "default_route_table_id": "rtb-0348729cb64d7ed20",
            "default_security_group_id": "sg-04039f82be9a6fec1",
            "dhcp_options_id": "dopt-0178784f81501caae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be7bfefe153d511c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0348729cb64d7ed20",
            "owner_id": "041626773691",
            "region": "eu-central-1",
            "tags": {
              "Name": "fleet-vpc"
            },
            "tags_all": {
              "Name": "fleet-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "041626773691",
            "id": "vpc-0be7bfefe153d511c",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}